:bug: [#5884] Correctly wrapping long unbroken summary values
Prevent long unbroken summary values from breaking the UI by adding word-break styling.

"Long unbroken summary values" means long textual values that don't contain any 'nice' breaking/wrapping points (like spaces or soft-hypes), like file names that exceed 255 characters. Normal long values, like textarea content of 1000+ characters with spaces, don't cause UI issues and won't be negatively affected by this change.

--- a/src/scss/components/_data-list.scss
+++ b/src/scss/components/_data-list.scss
@@ -64,7 +64,9 @@
     }
 
     @include bem.element('item-value') {
-      overflow-wrap: break-word;
+      overflow-wrap: anywhere;
+      // This will break long words, but will respect any soft hyphens
+      word-break: normal;
       flex-basis: 50%;
     }
 
